# dbgadapter

./: Cargo.toml
.cargo/: config
.github/workflows/: build.yml
backends/windbg/: Cargo.toml
backends/windbg/src/: dbgeng.rs  event.rs  handlers.rs  lib.rs
backends/windbg/src/dbgeng/: client.rs  control.rs  error.rs  event_callbacks.rs  registers.rs  symbols.rs
backends/windbg/src/event/: state_change.rs
frontends/ghidra/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
frontends/ghidra/buildSrc/: build.gradle.kts
frontends/ghidra/buildSrc/src/main/kotlin/com/github/michaelbull/gradle/cargo/: CargoExtension.kt  CargoPlugin.kt  CargoTarget.kt
frontends/ghidra/buildSrc/src/main/kotlin/com/github/michaelbull/gradle/cargo/task/: CargoBuildTask.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/: util.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/client/: Debugger.kt  DebuggerClient.kt  DebuggerCommandDispatcher.kt  DebuggerEventListener.kt  DebuggerEventProducer.kt  DelegateDebuggerEventListener.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/client/launcher/: DebuggerClientLauncher.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/client/message/: DebuggerCommand.kt  DebuggerEvent.kt  DebuggerNotification.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/client/state/: addr.kt  registers.kt  stack.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/plugin/: Debugger.kt  DebuggerEventListener.kt  DebuggerImpl.kt  DebuggerInstance.kt  DebuggerPlugin.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/plugin/ui/: DebuggerComponent.kt  DebuggerComponentProvider.kt  DebuggerIcons.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/plugin/ui/action/: DebuggerCommandAction.kt  StopDebuggerAction.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/plugin/ui/action/step/: SingleStepAction.kt
frontends/ghidra/src/main/java/com/github/garyttierney/ghidradbg/program/: DebuggedProgramState.kt  DebuggedProgramStateChangeListener.kt  DebuggedProgramStateProvider.kt
frontends/ghidra/src/main/resources/: DebuggerComponent.properties
ghidradbg_backend/: Cargo.toml
ghidradbg_backend/src/: command.rs  event.rs  lib.rs  state.rs
ghidradbg_backend/src/state/: registers.rs  stack.rs  value.rs
src/: main.rs
