[package]
name = "ghidra-dbg"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@fastmail.com>"]
edition = "2018"

[workspace]
members = [
    "ghidradbg_backend",
    "backends/windbg"
]

[dependencies]
bytes = "0.5.0"
env_logger = "0.8.1"
ghidradbg-backend = { path = "./ghidradbg_backend" }
ghidradbg-backend-windbg = { path = "./backends/windbg", optional = true }
futures = "0.3.7"
log = "0.4.11"
serde_json = "1.0.59"
serde = "1.0.117"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec", "compat"] }

[features]
default = ["windbg"]
windbg = ["ghidradbg-backend-windbg"]