[package]
name = "ghidradbg-backend"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.22"
