[package]
name = "ghidradbg-backend-windbg"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@fastmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.41"
bitflags = "1.2.1"
bytes = "0.5.0"
futures = "0.3.5"
ghidradbg-backend = { path = "../../ghidradbg_backend" }
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["full"] }
winapi = { git = "https://github.com/garyttierney/winapi-rs", branch = "dbgeng", features = ["errhandlingapi", "unknwnbase", "dbgeng", "combaseapi", "objbase", "winerror"] }
